lints.workspace = true

[package]
name = "gix-blame"
version = "0.10.0"
repository = "https://github.com/GitoxideLabs/gitoxide"
license = "MIT OR Apache-2.0"
description = "A crate of the gitoxide project dedicated to implementing a 'blame' algorithm"
authors = ["Christoph Rüßler <christoph.ruessler@mailbox.org>", "Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2021"
rust-version = "1.82"

[features]
## Enable support for the SHA-1 hash by forwarding the feature to dependencies.
sha1 = [
    "gix-commitgraph/sha1",
    "gix-diff/sha1",
    "gix-hash/sha1",
    "gix-object/sha1",
    "gix-revwalk/sha1",
    "gix-traverse/sha1",
    "gix-worktree/sha1",
]

[dependencies]
gix-error = { version = "^0.2.0", path = "../gix-error" }
gix-commitgraph = { version = "^0.34.0", path = "../gix-commitgraph" }
gix-revwalk = { version = "^0.28.0", path = "../gix-revwalk" }
gix-trace = { version = "^0.1.18", path = "../gix-trace" }
gix-date = { version = "^0.15.0", path = "../gix-date" }
gix-diff = { version = "^0.60.0", path = "../gix-diff", default-features = false, features = ["blob", "blob-experimental"] }
gix-object = { version = "^0.57.0", path = "../gix-object" }
gix-hash = { version = "^0.22.1", path = "../gix-hash" }
gix-worktree = { version = "^0.49.0", path = "../gix-worktree", default-features = false, features = ["attributes"] }
gix-traverse = { version = "^0.54.0", path = "../gix-traverse" }

smallvec = "1.15.1"
thiserror = "2.0.18"

[dev-dependencies]
gix-ref = { path = "../gix-ref" }
gix-filter = { path = "../gix-filter" }
gix-fs = { path = "../gix-fs" }
gix-index = { path = "../gix-index" }
gix-odb = { path = "../gix-odb" }
gix-testtools = { path = "../tests/tools" }
pretty_assertions = "1.4.0"

[package.metadata.docs.rs]
features = ["sha1"]
